2002-05-10  Glynn Foster  <glynn.foster@sun.com>

	* logrtns.c: Add sanity check. Fixes #81265.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* about.c, logview.c: Fix up some inconsistancies as pointed
	out by the doc team.

2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c, log_repaint.c, logview.c, zoom.c: More
	HIG Compliance stuff. Fixes #76685 in part. Man, this 
	code is *so* ugly. Hack after hack after hack. [sigh].

2002-05-07  Samuel Stringham <sams@e-sa.com>

	* zoom.c: (repaint_zoom): Fix repaint on zoom-in box. Fixes	
	#80904.

2002-05-07  Samuel Stringham <sams@e-sa.com>

	* actions.c, log_repaint.c: Some UI love.

2002-05-07  Satyajit Kanungo  <satyajit.kanungo@wipro.com>

	* gnome-system-log.desktop.in: Added DocPath in the 
	desktop.in file. Fixes #80921.

2002-05-03  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: s/Date/Last Modified. It seems a slightly better
	solution, although when you scroll up it seems to randomly
	change the date in the status bar. Fixes #72782 somewhat
	but we should get rid of the updates and just use one non
	changing date, whatever that might be.
	* logrtns.c: Include <errno.h> in the view to giving more 
	useful error messages.
 
2002-05-03  Xing Wang <quixon@gnuchina.org>

	* calendar.c: (CalendarMenu), (close_calendar): Don't NULL
	CalendarDialog when we are only hiding the widget. Fixes
	#80403.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c: (CalendarMenu): Oops, forgot to 
	make non-resizable.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* calendar.c: (CalendarMenu): Adapted patch from
	Xing Wang <quixon@gnuchina.org> to fix #77194.

2002-05-01  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-regexp.db: Add fix from 
	 voss@debian.org (Jochen Voss) for #73406.

2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>

	* about.c:  fix code to correctly find logview.xpm logo
	in the about dialog.  Change name to match application menu.
	Fixes #80109.
	