@@ -1,5 +1,10 @@
 2002-05-10  Glynn Foster  <glynn.foster@sun.com>
 
+	* calendar.c, logview.c, zoom.c: Fix crashes on dialog 
+	boxes when 'Esc' is used.
+
+2002-05-10  Glynn Foster  <glynn.foster@sun.com>
+
 	* logrtns.c: Add sanity check. Fixes #81265.
 
 2002-05-08  Glynn Foster  <glynn.foster@sun.com>
